fix mobile view - add horizontal scroll

--- a/src/app/views/home/intro-one/intro-one.component.scss
+++ b/src/app/views/home/intro-one/intro-one.component.scss
@@ -34,7 +34,7 @@
     z-index: 2;
     .btn-container {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
     }
 
     h1 {
@@ -60,11 +60,12 @@
 
 .row {
   button {
+    background-color: #269671;
     color: #ffffff;
     transition: 0.6s;
   }
   button:hover {
-    background: #268469;
+    background: #008458;
   }
 }
 
